Cros splitscreen: Show minimized window before sending the state change notification.

Bug: 829092
Change-Id: Ibfe49a09148cfcd7b6fb489eadfbc5b43bb682ec
Reviewed-on: https://chromium-review.googlesource.com/996570
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#548252}
Former-commit-id: 1df2f2700848504604fd7d94e11ab17d99f56db1